Fix: The 'Align self' controls won't work if the flex child element is a link [ED-18912]

--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -13,6 +13,10 @@
 	a {
 		box-shadow: none;
 		text-decoration: none;
+
+		&.e-link{
+			display: inherit;
+		}
 	}
 
 	hr {
